--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,14 +1,144 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/css/app.css">
-</head>
-<body>
-    <h1 class="hello">Hello world</h1>
-</body>
-</html>
+<section class="hero py-16">
+    <div class="container px-4 mx-auto flex items-center justify-between">
+        <div class="w-1/2">
+            <h6 class="text-lg"><em>Kamu Lapar?</em></h6>
+            <h1 class="text-6xl font-bold">Mau Pizza!</h1>
+            <button class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary">Order Now</button>
+        </div>
+        <div class="w-1/2">
+            <img src="/img/hero-pizza.png" alt="pizza-hero">
+        </div>
+    </div>
+</section>
+
+<section class="menu container px-4 mx-auto py-8">
+    <h1 class="text-xl font-bold mb-8">All Pizza</h1>
+    <div class="grid grid-cols-4 col-gap-12 row-gap-16">
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-64">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
+            <div class="text-center">
+                <h2 class="mb-4 text-lg">Beef special</h2>
+                <span class="size py-1 px-4 rounded-full uppercase text-xs">Small</span>
+                <div class="flex justify-around items-center mt-6">
+                    <span class="font-bold text-lg">Rp.55.000</span>
+                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span>+</span>
+                        <span class="ml-4">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
